<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".First">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/gradient"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/back" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_1"
                android:textColor="#192981"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ttl_amount_1"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48sp" />

            <TextView
                android:id="@+id/number_ppl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/people"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ppl_no_1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/calculateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/shape"
                    android:text="@string/calculate" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="Clear" />

            </LinearLayout>

            <Button
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:text="@string/history" />

            <TextView
                android:id="@+id/display_eq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:textSize="22sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>