<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/mobile_01" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Main Menu"
        android:textColor="#000000"
        android:textSize="30dp" />

    <Button
        android:id="@+id/menu_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/menu"
        android:text="@string/title_1"
        android:textColor="#575656"
        android:textSize="18dp" />

    <Button
        android:id="@+id/menu_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="70dp"
        android:background="@drawable/menu"
        android:text="@string/title_2"
        android:textColor="#575656"
        android:textSize="18dp" />

    <Button
        android:id="@+id/menu_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:background="@drawable/menu"
        android:text="@string/title_3"
        android:textColor="#575656"
        android:textSize="18dp" />

</LinearLayout>